# Palit

./: .gitignore  API.txt  Cargo.toml  Makefile  README.md  TODO  _plugin.c  _plugin_part.c  compose.yml
examples/: theme.toml
pt-client/: .gitignore  Cargo.toml  Makefile  error  temp  test  typescript
pt-client/examples/assets/: Whiplash.fcpxml
pt-client/scripts/: debug  run  test
pt-client/src/: .main.rs.swp  client.rs  common.rs  components.rs  editor.rs  main.rs  modules.rs  timeline.rs  views.rs
pt-client/src/assets/: keyboard.txt  logo.txt
pt-client/src/common/: action.rs  color.rs  files.rs  layout.rs  multifocus.rs  pcm.rs  render.rs  timeline.rs
pt-client/src/components/: alert.rs  anchor.rs  artist.rs  bigtext.rs  border.rs  button.rs  casette.rs  color_button.rs  credits.txt  index.rs  ivories.rs  keyboard.rs  logo.rs  mod.rs  multifocus.rs  piano.rs  popup.rs  region.rs  region_audio.rs  region_midi.rs  roll.rs  rotary.rs  ruler.rs  scroll.rs  slider.rs  splash.rs  tempo.rs  timeline_meter.rs  timeline_nav.rs  track.rs  track_header.rs  waveform.rs
pt-client/src/core/: mod.rs
pt-client/src/helpers/: keyboard.rs  reducer.rs  template_component.rs  template_view.rs
pt-client/src/modules/: patch.rs  timeline.rs
pt-client/src/style/: theme.toml
pt-client/src/utils/: document.rs  macros.rs  mod.rs  new_component.rs  new_view.rs  reducer.rs  state.rs
pt-client/src/views/: arpeggio.rs  hammond.rs  help.rs  home.rs  keyboard.rs  layer.rs  mod.rs  modules.rs  patch.rs  pepper.rs  piano.rs  plugin.rs  project.rs  routes.rs  save.rs  timeline.rs  title.rs
pt-client/storage/: project.xml
pt-common/: .gitignore  Cargo.toml
pt-design/: Characters.rtf  Iteration1.sketch  MANUAL.txt  UIColor copy.rtf  UIColor-Font.rtf  UIColor.rtf  (+7 more)
pt-sound/: .gitignore  Cargo.toml  Dockerfile  Makefile  pPrinter.cpp
pt-sound/dsp-faust/: DspFaust.cpp  README.md
pt-sound/src/: .main.rs.swp  action.rs  arpeggio.rs  chord.rs  core.rs  document.rs  faust.rs  main.rs  midi.rs  mixer.rs  plugin.rs  synth.rs  tape.rs  timeline.rs
(+63 files in other folders)
