[package]
name = "pt-client"
version = "0.1.0"
authors = ["James Kolsby <jrkolsby@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux_raw_input_rs = "0.1.6"
itertools = "0.8.0"
hound = "3.4.0"
termion = "1.5.3"
braille = "1.0.2"
xmltree = "0.8.0"
libc = "0.2.62"