[package]
name = "pt-sound"
version = "0.1.0"
authors = ["jrkolsby <jrkolsby@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sample = "0.10"
wavefile = "0.2.0"
libc = "0.2.62"
dsp-chain = "0.13.1"
portaudio = "0.6.4"
xmltree = "0.8.0"
object-pool = "0.4.4"
chrono = "0.4.10"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.2"